--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Recorder" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/grey_dark</item>
-    </style>
+    <style name="Theme.Recorder" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
